--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,48 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap');
+
+html, body, p, div, h1, h2, h3, h4 {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Lato', sans-serif;
+  background-color:gray ;
+  color: black;
 }
-
 a {
-  color: inherit;
-  text-decoration: none;
+  color: black;
 }
 
-* {
-  box-sizing: border-box;
+.container {
+  /* min-height: 100vh; */
+  /* height: 100vh; */
+  max-width: 375px;
+  padding: 0px;
+  margin: 0px auto;
+  background-color: white;
+}
+
+.seach {
+  margin: auto;
+}
+
+header li {
+  display: inline-block;
+  padding-right: 10px;
+}
+
+footer {
+  margin-top: 30px;
+  text-align: center;
+  padding: 20px;
+}
+
+.main {
+  padding: 5rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
