--- a/pages/scss/App.scss
+++ b/pages/scss/App.scss
@@ -1,4 +1,11 @@
+
+@import "custom";
+
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap');
+
+$color-light: white;
+$color-dark: black;
+$color-gray:gray;
 
 html, body, p, div, h1, h2, h3, h4 {
   margin: 0px;
@@ -7,24 +14,38 @@ html, body, p, div, h1, h2, h3, h4 {
 
 body {
   font-family: 'Lato', sans-serif;
-  background-color:gray ;
-  color: black;
+  background-color:$color-gray ;
+  color: $color-dark;
 }
+
 a {
-  color: black;
+ color: $color-dark;
 }
 
 .container {
-  /* min-height: 100vh; */
-  /* height: 100vh; */
   max-width: 375px;
-  padding: 0px;
+  padding: 20px 0px;
   margin: 0px auto;
-  background-color: white;
+  background-color:$color-light;
+  text-align: center;
+}
+
+.main {
+  padding: 5rem 0;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .seach {
   margin: auto;
+  width: 100%;
+}
+
+.navbar {
+  justify-content: center;
 }
 
 header li {
@@ -38,11 +59,3 @@ footer {
   padding: 20px;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
