--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,4 @@
-
-@import "custom";
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,300&display=swap');
-
-$color-light: white;
-$color-dark: black;
-$color-gray:gray;
 
 html, body, p, div, h1, h2, h3, h4 {
   margin: 0px;
@@ -14,29 +7,12 @@ html, body, p, div, h1, h2, h3, h4 {
 
 body {
   font-family: 'Lato', sans-serif;
-  background-color:$color-gray ;
-  color: $color-dark;
+  background-color:gray ;
+  color: black;
 }
 
 a {
- color: $color-dark;
-}
-
-.container {
-  max-width: 375px;
-  padding: 20px 0px;
-  margin: 0px auto;
-  background-color:$color-light;
-  text-align: center;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+ color:black;
 }
 
 .seach {
@@ -58,4 +34,6 @@ footer {
   text-align: center;
   padding: 20px;
 }
+
+
 
