--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,9 @@ footer {
   height: 20px;
   /* content: '\219 \219 \219 \219 \219'; */
   content: url('../public/bean-small.svg') url('../public/bean-small.svg') url('../public/bean-small.svg') url('../public/bean-small.svg') url('../public/bean-small.svg');
+  filter: invert(96%) sepia(7%) saturate(2145%) hue-rotate(9deg) brightness(88%) contrast(81%);
+  /* HEX: #c5c983*/
+
 }
 
 .beans-inner {
@@ -58,7 +61,9 @@ footer {
 
 .beans-inner::before {
   content: url('../public/bean-small.svg') url('../public/bean-small.svg') url('../public/bean-small.svg') url('../public/bean-small.svg') url('../public/bean-small.svg');
-  filter: invert(48%) sepia(79%) saturate(2476%) hue-rotate(86deg) brightness(118%) contrast(119%);
+
+ filter: invert(22%) sepia(39%) saturate(718%) hue-rotate(331deg) brightness(101%) contrast(87%);
+ /* HEX: 6b3e2e */
 
 }
 
