--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,9 +66,9 @@ a:link, a:visited{
 .container {
   max-width: 1200px;
   margin: 0px auto;
-  min-height: 600px;
   position: relative;
-  padding: 0px 0px 100px 0px
+  padding: 0px 0px 0px 0px;
+  min-height: calc(100vh - 60px);
 }
 main {
   padding: 30px;
@@ -210,7 +210,7 @@ h3, .name {
   -webkit-font-smoothing: antialiased;
 }
 
-.location::before,.btn-near-me::before, .opening_hours::before , .btnBack::before {
+.location::before,.btn-near-me::before, .opening_hours::before , .btnBack::before, .btnDelete::before {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   content: "\f3c5";
@@ -231,6 +231,16 @@ h3, .name {
   content: "\f30a";
 }
 
+.btnDelete::before {
+  content: "\f2ed";
+}
+
+.btnDelete {
+  margin-top:30px;
+  transform: scale(0.8);
+  margin-left: -60px;
+}
+
 .btn-google {
   background-color: #B61C07;
   color: #fff;
@@ -238,8 +248,9 @@ h3, .name {
   width: 100%;
   border-radius: 10px !important;
   padding: 10px 0px;
-  margin:20px auto;
+  margin:40px auto;
   transition: transparent .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+  max-width: 300px;
 }
 
 /*** For Shop ***/
@@ -257,6 +268,7 @@ h3, .name {
 #account {
   display: block;
   overflow: hidden;
+  padding-top: 20px;
   margin-bottom: 50px;
 }
 
