--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,6 +71,7 @@ a:link, a:visited{
   min-height: calc(100vh - 60px);
   padding-bottom: 50px;
 }
+
 main {
   padding: 30px;
 }
@@ -269,6 +270,11 @@ h3, .name {
 .login-msg {
   text-align: center;
   margin: 30px auto;
+}
+
+.login-page {
+  background: url('../public/bg-login.jpg') no-repeat center;
+  background-size: cover;
 }
 
 #login {
