--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,6 +127,44 @@ header li {
   padding-right: 10px;
 }
 
+/*** For Home ***/
+
+.Home-page {
+  position: relative;
+}
+
+/* #myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+video {
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+} */
+
+/* .Home-page .video {
+  position: absolute;
+  min-width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+} */
+
+/* .Home-page .video video {
+  z-index: 0;
+   width: 100%;
+   display: inline-block;
+   vertical-align: baseline;
+} */
+
 /*** For Shops ***/
 .nav-tabs {
   border: none;
@@ -257,7 +295,7 @@ h3, .name {
   border-radius: 10px !important;
   padding: 5px 0px;
   margin:40px auto;
-  transition: transparent .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+  transition: transparent .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
   max-width: 300px;
 }
 
@@ -266,7 +304,46 @@ h3, .name {
   margin-bottom: 20px;
 }
 
-/*** For Shop ***/
+/*** For Login ***/
+.google-btn-container {
+  /* width: 75%;
+  background-color: white;
+  border-radius: 9px;
+  border-color: rgb(211, 208, 208);
+  border-style: solid; */
+  box-shadow: 1px 1px 5px 1px #835757;
+}
+
+/* .google-btn-container:hover {
+  box-shadow: 1px 1px 10px 3px #e3e0e0;
+} */
+
+/* .google-btn {
+  width: 100%;
+
+} */
+
+.google-logo {
+  margin-right: 0%;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+
+.google-signin {
+  display: inline;
+  color: rgb(255, 255, 255);
+  font-size: 15px;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0 5% 0 10%;
+  font-weight: 700;
+}
+
+.profile-photo {
+  border-radius: 50%;
+}
+
+
 .login-msg {
   text-align: center;
   margin: 30px auto;
@@ -341,44 +418,6 @@ footer {
  filter: invert(22%) sepia(39%) saturate(718%) hue-rotate(331deg) brightness(140%) contrast(87%);
  /* HEX: 6b3e2e */
 
-}
-
-.google-btn-container {
-  /* width: 75%;
-  background-color: white;
-  border-radius: 9px;
-  border-color: rgb(211, 208, 208);
-  border-style: solid; */
-  box-shadow: 1px 1px 5px 1px #835757;
-}
-
-/* .google-btn-container:hover {
-  box-shadow: 1px 1px 10px 3px #e3e0e0;
-} */
-
-/* .google-btn {
-  width: 100%;
-
-} */
-
-.google-logo {
-  margin-right: 0%;
-  margin-top: 4%;
-  margin-bottom: 4%;
-}
-
-.google-signin {
-  display: inline;
-  color: rgb(255, 255, 255);
-  font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  margin: 0 5% 0 10%;
-  font-weight: 700;
-}
-
-.profile-photo {
-  border-radius: 50%;
 }
 
 
