--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,41 +129,54 @@ header li {
 
 /*** For Home ***/
 
-.Home-page {
-  position: relative;
+.Home-page .main{
+  position: fixed;
+    top: 0px;
+    right: 0;
+    left: 0px;
+    bottom: 0;
+    width: 100%;
+    z-index: -1;
+    height: 100vh;
+    display: flex;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }
 
-/* #myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-}
 video {
   object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  top: 0;
-  left: 0;
-} */
-
-/* .Home-page .video {
   position: absolute;
   min-width: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-} */
+}
 
-/* .Home-page .video video {
-  z-index: 0;
-   width: 100%;
-   display: inline-block;
-   vertical-align: baseline;
-} */
+.over {
+  position: fixed;
+  top: 0px;
+  right: 0;
+  left: 0px;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.Home-page h1 {
+  font-family: 'Bitter', serif;
+  position: fixed;
+  z-index: 2;
+  line-height: 150%;
+  text-align: center;
+  color: #ddc5ad;
+  /* text-shadow: 1px 3 1px #000000; */
+  font-weight: 400;
+
+}
 
 /*** For Shops ***/
 .nav-tabs {
