--- a/styles/globals.css
+++ b/styles/globals.css
@@ -248,7 +248,8 @@ h3, .name {
   margin-left: -60px;
 }
 
-.btn-google {
+.btn-google,
+.facebook-btn {
   background-color: #B61C07;
   color: #fff;
   border: none;
@@ -272,6 +273,8 @@ h3, .name {
 }
 
 #login {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   padding-top: 150px;
 }
