fixed merger shops with main

--- a/styles/review.css
+++ b/styles/review.css
@@ -72,7 +72,7 @@ white: #FFF
 }
 
 /* review buttons */
-#review-btns {
+#review-buttons {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 5px;
