--- a/styles/createReview.css
+++ b/styles/createReview.css
@@ -34,7 +34,7 @@
   border-radius: 7px;
   border: 5px;
   margin: 5px 0 0 150px;
-  /* margin needs to refactor/ display flex doesnt work!! */
+  /* margin needs to refactor/ display flex doesn't work!! */
 }
 
 
