Add css file for light mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ a:link, a:visited{
   transform: scale(1);
   transition: .2s ease-in-out;
   padding: 3px 15px;
-  background-color: transparent;
+  background-color: rgba(165,124,82,0);
 }
 
 .btn:hover {
@@ -376,7 +376,7 @@ h3, .name {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding-top: 150px;
+  padding-top: 100px;
 }
 
 /*** For Profile ***/
@@ -439,6 +439,3 @@ footer {
  /* HEX: 6b3e2e */
 
 }
-
-
-
