--- a/styles/light-mode.css
+++ b/styles/light-mode.css
@@ -1,8 +1,33 @@
+.darkMode {
+  background-color: black;
+  color: white;
+  transition: 0.5s;
+  z-index: 1000;
+}
+.mode {
+  position: fixed;
+  top: 30px;
+  right: 30px;
+}
+
+.iconMode {
+  background: rgb(224, 224, 224) url="../public/modeicon.png" no-repeat -40px 5px;
+  background-size: 80px;
+  height: 50px;
+  width: 50px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.darkMode .iconMode {
+  background: rgb(216, 216, 216) url="../public/modeicon.png" no-repeat 6px 5px;
+  background-size: 80px;
+}
+
 .lightMode {
   color: black;
   background-color: #ffffff;
-  /* background: url('../public/bg-light.jpeg') no-repeat top;
-   background-size: cover; */
 }
 .lightMode .login-page {
   background: none;
@@ -42,3 +67,152 @@
 .lightMode footer {
   color: white;
 }
+
+
+.toggle--checkbox {
+  display: none;
+}
+
+.toggle--checkbox:checked + .toggle--label {
+  background: red;
+  border-color: red
+  /** Change the cloud to stars **/
+  /** Change the sun into the moon **/
+  /** Show the dimples on the moon **/
+}
+.toggle--checkbox:checked + .toggle--label .toggle--label-background {
+  left: 60px;
+  width: 5px;
+}
+.toggle--checkbox:checked + .toggle--label .toggle--label-background:before {
+  width: 5px;
+  height: 5px;
+  top: -25px;
+}
+.toggle--checkbox:checked + .toggle--label .toggle--label-background:after {
+  width: 5px;
+  height: 5px;
+  left: -30px;
+  top: 20px;
+}
+.toggle--checkbox:checked + .toggle--label:before {
+  background: white;
+  border-color: gray;
+  animation-name: switch;
+  animation-duration: 350ms;
+  animation-fill-mode: forwards;
+}
+.toggle--checkbox:checked + .toggle--label:after {
+  transition-delay: 350ms;
+  opacity: 1;
+}
+.toggle--label {
+  /** Placeholder element, starting at blue **/
+  width: 200px;
+  height: 100px;
+  background:#a57c52;
+  border-radius: 100px;
+  border: 5px solid #a57c52;
+  display: flex;
+  position: relative;
+  transition: all 350ms ease-in;
+  /** The sun cloud and moon stars **/
+  /** Sun/Moon element **/
+  /** Gray dots on the moon **/
+}
+.toggle--label-background {
+  width: 10px;
+  height: 5px;
+  border-radius: 5px;
+  position: relative;
+  background: var(--white);
+  left: 135px;
+  top: 45px;
+  transition: all 150ms ease-in;
+}
+.toggle--label-background:before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  width: 40px;
+  height: 5px;
+  border-radius: 5px;
+  background: var(--white);
+  left: -20px;
+  transition: all 150ms ease-in;
+}
+.toggle--label-background:after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  width: 40px;
+  height: 5px;
+  border-radius: 5px;
+  background: var(--white);
+  left: -10px;
+  transition: all 150ms ease-in;
+}
+.toggle--label:before {
+  animation-name: reverse;
+  animation-duration: 350ms;
+  animation-fill-mode: forwards;
+  transition: all 350ms ease-in;
+  content: "";
+  width: 82px;
+  height: 82px;
+  border: 5px solid red;
+  top: 4px;
+  left: 4px;
+  position: absolute;
+  border-radius: 82px;
+  background: red
+}
+
+.toggle--label:after {
+  transition-delay: 0ms;
+  transition: all 250ms ease-in;
+  position: absolute;
+  content: "";
+  /* box-shadow: var(--gray-dots) -13px 0 0 2px, var(--gray-dots) -24px 14px 0 -2px; */
+  left: 143px;
+  top: 23px;
+  width: 10px;
+  height: 10px;
+  background: transparent;
+  border-radius: 50%;
+  opacity: 0;
+}
+
+@keyframes switch {
+  0% {
+    left: 4px;
+  }
+  60% {
+    left: 4px;
+    width: 112px;
+  }
+  100% {
+    left: 104px;
+    width: 82px;
+  }
+}
+@keyframes reverse {
+  0% {
+    left: 104px;
+    width: 82px;
+  }
+  60% {
+    left: 72px;
+    width: 112px;
+  }
+  100% {
+    left: 4px;
+  }
+}
+
+
+/* <input type="checkbox" id="toggle" className="toggle--checkbox" />
+<label for="toggle" className="toggle--label">
+  <span className="toggle--label-background"></span>
+</label>
+ */
