--- a/styles/globals.css
+++ b/styles/globals.css
@@ -95,7 +95,7 @@ header {
 }
 
 #nav .logo {
-  background: url('../public/betterbean-logo.png') no-repeat center;
+  background: url('../public/') no-repeat center;
   background-size: cover;
   width: 100px;
   height: 67px;
