--- a/styles/createReview.css
+++ b/styles/createReview.css
@@ -5,36 +5,60 @@
   margin: 5px;
   padding: 15px;
   letter-spacing: 1px;
-  font-weight: 300;
+  font-weight: 400;
   /* height: 300px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 #select-your-rating {
-  font-size: 12px;
+  font-size: 14px;
 }
 #select-beans {
   padding-left: 10px;
 }
 #write-review {
-  font-size: 12px;
+  font-size: 14px;
 }
 #write-review-input {
   width: 90%;
-  margin: 0 0 5px 15px;
+  margin: 0 0 5px 0;
 }
 #input-photo-review {
   font-size: 12px;
   letter-spacing: 1px;
-  /* height: ; */
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 25px;
+  border-radius: 8px;
+  box-shadow: 0 0 1.5px rgba(255, 255, 255, 0.5);
+  color: white;
+  font-weight: bold;
+}
+#uploaded-photos-section {
+  display: flex;
+  flex-wrap: wrap;
+}
+#uploaded-photo {
+  height: 65px;
+  width: auto;
+
+  margin: 5px 5px 0 0;
+}
+#submit-review-section {
+  display: flex;
+  justify-content: flex-end;
+  margin: 5px;
 }
 #submit-review-btn {
+  border: 5px;
+  border-radius: 7px;
   font-size: 15px;
   color: white;
-  border: 1px solid rgba(255, 255, 255, 0.75);
+  border: white 1px solid;
   background-color: transparent;
-  border-radius: 7px;
-  border: 5px;
-  margin: 5px 0 0 150px;
-  /* margin needs to refactor/ display flex doesn't work!! */
+  box-shadow: 0 1px 3px rgba(255, 255, 255, 0.5);
 }
 
 
