--- a/styles/light-mode.css
+++ b/styles/light-mode.css
@@ -1,72 +1,85 @@
 
 .mode {
   display: inline-block;
-    float: right;
-    margin-left: 10px;
-    transform: scale(.3);
-    width: 100px;
-    margin-top: -6px;
-    height: 30px;
+  float: right;
+  transform: scale(.25);
+  width: 100px;
+  margin-top: -6px;
+  height: 30px;
+  margin-left: -20px;
 }
 
-.lightMode  {
-
+.Home-page .lightMode  {
+  background:transparent;
 }
+
+.lightMode #login p {
+  background-color: rgba(255,255,255,0.3);
+}
+
 .lightMode {
   color: black;
-  /* background-color: #ffffff; */
+  background-color: #ffffff;
 }
-.lightMode .login-page {
-  background: none;
+
+.login-page .lightMode  {
+  background: url('../public/photo-1513530176992-0cf39c4cbed4.jpeg') no-repeat top ;
+  background-size: cover;
 }
+
 .lightMode header {
   background: linear-gradient(#FFF, #fff5d5);
   padding: 30px;
   box-shadow: 0px 1px 10px 0px rgba(94, 74, 74, 0.15);
 }
+
 .lightMode .btn {
   border: 1px solid #d5d5d5;
   background-color: #a57c52;
 }
+
 .lightMode #nav .logo {
   border: 1px solid #a57c52;
   box-shadow: 1px 1px 5px 1px #c9b8b8;
 }
+
 .lightMode .title {
   background: url('../public/icon-gold.svg') no-repeat left;
   background-size: 26px;
 }
+
 .lightMode .card {
   color: #0D0401;
   border: 1px solid #440C04;
   background-color: rgba(255, 255, 240, 0.6);
 }
+
 .lightMode .card a {
   color: #0D0401;
 }
-.lightMode .btn-google, .lightMode .facebook-btn {
-  background-color: #B61C07;
-}
-.lightMode .login-page {
-  /* background: url('../public/bg-light.jpeg') no-repeat bottom;
-   background-size: cover; */
-}
-.lightMode footer {
-  color: white;
-}
 
+/* .lightMode .btn-google, .lightMode .facebook-btn {
+ background-color: #440C04;
+} */
+
+.lightMode footer {
+  color: gray;
+  margin-top: 30px;
+  text-align: center;
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+}
 
 .toggle--checkbox {
   display: none;
 }
 
 .toggle--checkbox:checked + .toggle--label {
-  background: red;
-  border-color: red
-  /** Change the cloud to stars **/
-  /** Change the sun into the moon **/
-  /** Show the dimples on the moon **/
+  background: #c7796e;
+  border-color: #c7796e;
 }
+
 .toggle--checkbox:checked + .toggle--label .toggle--label-background {
   left: 60px;
   width: 5px;
@@ -84,7 +97,7 @@
 }
 .toggle--checkbox:checked + .toggle--label:before {
   background: white;
-  border-color: gray;
+  border-color: #c7796e;
   animation-name: switch;
   animation-duration: 350ms;
   animation-fill-mode: forwards;
@@ -112,7 +125,7 @@
   height: 5px;
   border-radius: 5px;
   position: relative;
-  background: var(--white);
+  background: white;
   left: 135px;
   top: 45px;
   transition: all 150ms ease-in;
@@ -124,7 +137,7 @@
   width: 40px;
   height: 5px;
   border-radius: 5px;
-  background: var(--white);
+  background: white;
   left: -20px;
   transition: all 150ms ease-in;
 }
@@ -135,7 +148,7 @@
   width: 40px;
   height: 5px;
   border-radius: 5px;
-  background: var(--white);
+  background: white;
   left: -10px;
   transition: all 150ms ease-in;
 }
@@ -147,12 +160,12 @@
   content: "";
   width: 82px;
   height: 82px;
-  border: 5px solid red;
+  border: 5px solid #a57c52;
   top: 4px;
   left: 4px;
   position: absolute;
   border-radius: 82px;
-  background: red
+  background: #751b0e;;
 }
 
 .toggle--label:after {
@@ -197,6 +210,35 @@
   }
 }
 
+.lightMode .btn-google {
+  margin-top: 30px;
+  background-color: white;
+  box-shadow: 1px 1px 5px 1px #c9b8b8;
+
+}
+
+.lightMode .btn-facebook {
+  background-color: rgb(86, 117, 190);
+
+}
+
+.lightMode .btn-github {
+  background-color: rgb(88, 83, 83);
+}
+
+.lightMode .btn-google:hover {
+  background-color: rgb(224, 222, 222);
+}
+
+.lightMode .btn-facebook:hover {
+  background-color: rgb(54, 89, 170);
+  box-shadow: 1px 1px 5px 1px #c9b8b8;
+
+}
+
+.lightMode .btn-github:hover {
+  background-color: rgb(49, 48, 48);
+}
 
 /* <input type="checkbox" id="toggle" className="toggle--checkbox" />
 <label for="toggle" className="toggle--label">
