--- a/styles/createReview.css
+++ b/styles/createReview.css
@@ -6,36 +6,36 @@
   padding: 15px;
   letter-spacing: 1px;
   font-weight: 400;
-  /* height: 300px; */
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-#select-your-rating {
-  font-size: 14px;
+
+#create-review  form {
+  width: 100%;
+  font-weight: 300;
 }
-#select-beans {
-  padding-left: 10px;
+
+#create-review  form>div {
+  margin-bottom: 5px;
 }
-#write-review {
-  font-size: 14px;
-}
+
 #write-review-input {
   width: 100%;
   margin: 0 0 5px 0;
+  border: 1px solid #bfb8b8;
+  border-radius: 10px;
 }
 #input-photo-review {
+  font-weight: 300;
   font-size: 12px;
-  letter-spacing: 1px;
   display: block;
   position: relative;
   width: 100%;
   height: 25px;
-  border-radius: 8px;
+  border-radius: 10px;
   box-shadow: 0 0 1.5px rgba(255, 255, 255, 0.5);
   color: white;
   margin-bottom: 5px;
-  font-weight: bold;
+  border: 1px solid #bfb8b8;
+
 }
 #uploaded-photos-section {
   display: flex;
@@ -53,16 +53,17 @@
   display: flex;
   justify-content: flex-end;
   margin: 5px;
+  border-radius: 10px;
 }
 #submit-review-btn {
   border: 5px;
-  border-radius: 7px;
+  border-radius: 10px;
   margin-top: 5px;
-  font-size: 15px;
   color: white;
   border: white 1px solid;
   background-color: transparent;
   box-shadow: 0 1px 3px rgba(255, 255, 255, 0.5);
+  font-weight: 300;
 }
 
 
