--- a/styles/review.css
+++ b/styles/review.css
@@ -1,6 +1,6 @@
 #reviews {
   display: flex;
-  flex-direction: column;
+  flex-direction:column-reverse;
 }
 #gi-coffee-beans-icon {
   font-size: 15px;
@@ -16,15 +16,15 @@
   background-color: #440C04;
   border-radius: 4px;
   width: 100%;
-  margin: 5px;
-  padding: 5px;
+  /* margin: 5px; */
+  padding: 15px;
 }
 
 /* reviewer info */
 #review-user-info {
   display: flex;
   flex-direction: row;
-  margin: 5px 0;
+  margin: 5px 0 10px 0px;
 }
 #review-user-info-inner {
   width: 100%;
@@ -40,15 +40,15 @@
 }
 #reviewer-first-name {
   /* margin-left: 10px; */
-  font-size: 14px;
-  font-weight: 300;
-  letter-spacing: 2px;
+  /* font-size: 14px;
+  font-weight: 300; */
+  /* letter-spacing: 2px; */
   margin: 0 5px;
 }
 #reviewer-date {
-  font-size: 10px;
+  /* font-size: 10px; */
   margin-right: 10px;
-  letter-spacing: 1px;
+  /* letter-spacing: 1px; */
 }
 
 /* center body for review */
@@ -57,12 +57,12 @@
   flex-direction: column;
   align-items: flex-start;
   /* padding: 5px 0; */
-  margin: 0 15px;
+  /* margin: 0 15px; */
 }
 #review-body {
-  font-size: 15px;
+  /* font-size: 15px;
   letter-spacing: 1px;
-  font-weight: 400;
+  font-weight: 400; */
 }
 
 /* review photos */
@@ -120,6 +120,7 @@
 #review-beans-outer {
   display: inline-block;
   position: relative;
+  line-height: 200%;
 }
 #review-beans-outer::before {
   width: 16px;
